--- a/app.json
+++ b/app.json
@@ -19,14 +19,14 @@
         "NSCameraUsageDescription": "This app uses the camera for video calls.",
         "NSMicrophoneUsageDescription": "This app uses the microphone to record audio for video or voice messages.",
         "ITSAppUsesNonExemptEncryption": false,
-        "UIBackgroundModes": [
-          "audio"
-        ]
+        "UIBackgroundModes": ["audio"]
       },
+
       "entitlements": {
         "aps-environment": "production"
       },
-      "googleServicesFile": "./GoogleService-Info.plist"
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "associatedDomains": ["applinks:diegodark-workcloud.expo.app"]
     },
     "android": {
       "adaptiveIcon": {
@@ -39,18 +39,14 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png",
       "babel": {
-        "exclude": [
-          "react-native-pdf"
-        ]
+        "exclude": ["react-native-pdf"]
       }
     },
     "plugins": [
-      [
-        "expo-router"
-      ],
+      ["expo-router"],
       [
         "expo-audio",
         {
@@ -60,17 +56,12 @@
       [
         "@stream-io/video-react-native-sdk",
         {
-          "ringingPushNotifications": {
-            "disableVideoIos": false,
-            "includesCallsInRecentsIos": false,
-            "showWhenLockedAndroid": true
-          },
-          "androidKeepCallAlive": true,
+          "androidKeepCallAlive": false,
           "enableNonRingingPushNotifications": true,
           "androidPictureInPicture": true
         }
       ],
-      "@config-plugins/react-native-callkeep",
+
       [
         "@config-plugins/react-native-webrtc",
         {
@@ -109,23 +100,13 @@
             "extraMavenRepos": [
               "$rootDir/../../../node_modules/@notifee/react-native/android/libs"
             ]
-          },
-          "ios": {
-            "forceStaticLinking": [
-              "RNFBApp",
-              "RNFBMessaging",
-              "stream-react-native-webrtc"
-            ]
           }
         }
       ],
       [
         "react-native-permissions",
         {
-          "iosPermissions": [
-            "Camera",
-            "Microphone"
-          ]
+          "iosPermissions": ["Camera", "Microphone"]
         }
       ],
       [
